[tool.poetry]
name = "pokemon-map"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pokemon_map"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "==3.1.*"
folium = "==0.11.*"
python-dotenv = "==0.15.*"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
